<resources>
    <string name="app_name">FirebaseAuthExample</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="event_title">Event Title</string>
    <string name="create">Create</string>
    <string name="attendees">Attendees</string>
    <string name="agenda">Agenda</string>
    <string name="update">UPDATE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter">filter</string>
    <string name="calendar">calendar</string>
    <string name="from">From date</string>
    <string name="done">Done</string>
    <string name="to">To date</string>
    <string name="sign_out">Sign out</string>
</resources>
