<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.activity.CreateEventActivity">

    <EditText
        android:id="@+id/etEventTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/event_title"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etAgenda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEventTitle"
        android:layout_alignStart="@+id/etEventTitle"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/agenda"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etAttendees"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etAgenda"
        android:layout_alignStart="@+id/etEventTitle"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/attendees"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etAttendees"
        android:layout_alignStart="@+id/etEventTitle"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceMedium" />
    </LinearLayout>

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/create" />
</RelativeLayout>